--- a/ProcessGremlin/ProcessGremlin.csproj
+++ b/ProcessGremlin/ProcessGremlin.csproj
@@ -44,10 +44,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FinderBuilder.cs" />
-    <Compile Include="GenericTimer.cs" />
-    <Compile Include="GremlinBuilder.cs" />
-    <Compile Include="GremlinTimerBuilder.cs" />
+    <Compile Include="GremlinCore\IGremlin.cs" />
+    <Compile Include="ProcessGremlin\IProcessGremlin.cs" />
+    <Compile Include="ProcessGremlin\ProcessGremlin.cs" />
+    <Compile Include="GremlinCore\GenericTimer.cs" />
+    <Compile Include="GremlinCore\Gremlin.cs" />
+    <Compile Include="GremlinCore\GremlinTimerBuilder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
