--- a/ProcessGremlinApp/NLog.config
+++ b/ProcessGremlinApp/NLog.config
@@ -9,7 +9,7 @@
   <targets>
     <target name="ColoredConsole" xsi:type="ColoredConsole" useDefaultRowHighlightingRules="false"
             layout="${longdate}|${pad:padding=5:inner=${level:uppercase=true}}|${message}" >
-      <highlight-row condition="level == LogLevel.Debug" foregroundColor="DarkGray" />
+      <highlight-row condition="level == LogLevel.Debug" foregroundColor="Blue" />
       <highlight-row condition="level == LogLevel.Info" foregroundColor="Gray" />
       <highlight-row condition="level == LogLevel.Warn" foregroundColor="Yellow" />
       <highlight-row condition="level == LogLevel.Error" foregroundColor="Red" />
