--- a/ProcessGremlinImplementations/ProcessGremlinImplementations.csproj
+++ b/ProcessGremlinImplementations/ProcessGremlinImplementations.csproj
@@ -43,10 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Finders\ProcessFinderBuilder.cs" />
-    <Compile Include="GremlinStrategy\KillBusyGremlin.cs" />
+    <Compile Include="Finders\BusyFinder.cs" />
+    <Compile Include="Finders\EvenLoadFinder.cs" />
+    <Compile Include="Finders\LimitedNumberFinder.cs" />
+    <Compile Include="Finders\NameBasedFinder.cs" />
     <Compile Include="GremlinStrategy\SimpleProcessGremlin.cs" />
-    <Compile Include="GremlinStrategy\EvenLoadPerNameGremlin.cs" />
     <Compile Include="GremlinStrategy\KillGremlin.cs" />
     <Compile Include="Logging\Event.cs" />
     <Compile Include="Logging\EventLogger.cs" />
@@ -54,6 +55,7 @@
     <Compile Include="Logging\Events\ApplicationStartedEvent.cs" />
     <Compile Include="Logging\Events\ErrorEvent.cs" />
     <Compile Include="Logging\Events\FailureEvent.cs" />
+    <Compile Include="Logging\Events\IntervalStartingEvent.cs" />
     <Compile Include="Logging\IEvent.cs" />
     <Compile Include="Logging\IEventLogger.cs" />
     <Compile Include="Logging\Events\ProcessKilledEvent.cs" />
