--- a/ProcessGremlinImplementations/ProcessGremlinImplementations.csproj
+++ b/ProcessGremlinImplementations/ProcessGremlinImplementations.csproj
@@ -53,8 +53,11 @@
     <Compile Include="Logging\EventLogger.cs" />
     <Compile Include="Logging\Events\ApplicationEndingEvent.cs" />
     <Compile Include="Logging\Events\ApplicationStartedEvent.cs" />
+    <Compile Include="Logging\Events\MeasuredCpuEvent.cs" />
+    <Compile Include="Logging\Events\WarningEvent.cs" />
     <Compile Include="Logging\Events\ErrorEvent.cs" />
     <Compile Include="Logging\Events\FailureEvent.cs" />
+    <Compile Include="Logging\Events\IntervalEndingEvent.cs" />
     <Compile Include="Logging\Events\IntervalStartingEvent.cs" />
     <Compile Include="Logging\IEvent.cs" />
     <Compile Include="Logging\IEventLogger.cs" />
