--- a/ProcessGremlin/ProcessGremlin.csproj
+++ b/ProcessGremlin/ProcessGremlin.csproj
@@ -44,6 +44,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Timer\ITimer.cs" />
+    <Compile Include="Timer\ITimerFactory.cs" />
+    <Compile Include="Timer\Timer2.cs" />
+    <Compile Include="Timer\TimerFactory.cs" />
     <Compile Include="ProcessGremlin\IGremlin.cs" />
     <Compile Include="GremlinCore\GenericTimer.cs" />
     <Compile Include="GremlinCore\GremlinTimerBuilder.cs" />
@@ -54,6 +58,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
