--- a/Logging/Logging.csproj
+++ b/Logging/Logging.csproj
@@ -1,16 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{54F0A358-8F2B-49C3-B618-EF81C9126017}</ProjectGuid>
+    <ProjectGuid>{9BF15B55-D1C2-4BC2-A038-8CAC363D2EBD}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ProcessGremlinImplementations</RootNamespace>
-    <AssemblyName>ProcessGremlinImplementations</AssemblyName>
+    <RootNamespace>Logging</RootNamespace>
+    <AssemblyName>Logging</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -40,28 +41,25 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Finders\BusyFinder.cs" />
-    <Compile Include="Finders\EvenLoadFinder.cs" />
-    <Compile Include="Finders\LimitedNumberFinder.cs" />
-    <Compile Include="Finders\NameBasedFinder.cs" />
-    <Compile Include="GremlinStrategy\SimpleProcessGremlin.cs" />
-    <Compile Include="GremlinStrategy\KillGremlin.cs" />
+    <Compile Include="Event.cs" />
+    <Compile Include="EventLogger.cs" />
+    <Compile Include="Events\ApplicationEndingEvent.cs" />
+    <Compile Include="Events\ApplicationStartedEvent.cs" />
+    <Compile Include="Events\ErrorEvent.cs" />
+    <Compile Include="Events\FailureEvent.cs" />
+    <Compile Include="Events\IntervalEndingEvent.cs" />
+    <Compile Include="Events\IntervalStartingEvent.cs" />
+    <Compile Include="Events\MeasuredCpuEvent.cs" />
+    <Compile Include="Events\ProcessKilledEvent.cs" />
+    <Compile Include="Events\WarningEvent.cs" />
+    <Compile Include="IEvent.cs" />
+    <Compile Include="IEventLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Logging\Logging.csproj">
-      <Project>{9bf15b55-d1c2-4bc2-a038-8cac363d2ebd}</Project>
-      <Name>Logging</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ProcessGremlin\ProcessGremlin.csproj">
-      <Project>{4fb846b6-b7da-44d3-921a-865580b56959}</Project>
-      <Name>ProcessGremlin</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
