--- a/Implementations/Implementations.csproj
+++ b/Implementations/Implementations.csproj
@@ -4,16 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4FB846B6-B7DA-44D3-921A-865580B56959}</ProjectGuid>
+    <ProjectGuid>{54F0A358-8F2B-49C3-B618-EF81C9126017}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ProcessGremlin</RootNamespace>
-    <AssemblyName>ProcessGremlin</AssemblyName>
+    <RootNamespace>ProcessGremlinImplementations</RootNamespace>
+    <AssemblyName>ProcessGremlinImplementations</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -31,10 +29,11 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
   <ItemGroup>
+    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
+      <HintPath>..\packages\NLog.4.0.1\lib\net45\NLog.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,14 +43,27 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GremlinCore\GenericTimer.cs" />
-    <Compile Include="GremlinCore\GremlinTimerBuilder.cs" />
-    <Compile Include="ProcessGremlin\IProcessFinder.cs" />
-    <Compile Include="ProcessGremlin\ProcessFinder.cs" />
+    <Compile Include="Finders\BusyFinder.cs" />
+    <Compile Include="Finders\EvenLoadFinder.cs" />
+    <Compile Include="Finders\LimitedNumberFinder.cs" />
+    <Compile Include="Finders\NameBasedFinder.cs" />
+    <Compile Include="GremlinStrategy\SimpleProcessGremlin.cs" />
+    <Compile Include="GremlinStrategy\KillGremlin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <ProjectReference Include="..\Logging\Logging.csproj">
+      <Project>{9bf15b55-d1c2-4bc2-a038-8cac363d2ebd}</Project>
+      <Name>Logging</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Core\Core.csproj">
+      <Project>{4fb846b6-b7da-44d3-921a-865580b56959}</Project>
+      <Name>Core</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
